Restore documentation and semantic grouping of the native bindings
Rework after review: the FFM bindings were flat lists of abbreviated
method-handle fields with no comments, and every call site was an untyped
`invoke(Object...)` with casts. This commit restores the structure of the
JNA-based code on top of FFM:

- One typed static Java method per native function, named exactly like the
  C function (SecItemCopyMatching, CFArrayCreate, CertOpenStore, ...),
  backed by `invokeExact`, with the original Javadoc and Apple/MSDN links.
- Constants keep their native names (kSecClass, kSecTrustSettingsResultTrustRoot,
  errSecItemNotFound, CERT_STORE_PROV_SYSTEM_REGISTRY_W, CERT_E_UNTRUSTEDROOT)
  and their grouping into sections mirroring the C headers; the full
  CERT_STORE_* / CERT_SYSTEM_STORE_* tables are back.
- CoreFoundationExtUtil is restored as the type-checked helper layer.
- SecurityFrameworkUtil / Crypt32ExtUtil get back all explanatory comments
  (why SecPolicyCreateSSL(server=false), Apple's semantics of empty trust
  settings and missing kSecTrustSettingsResult, why only TrustRoot is
  accepted, the dwError sentinel) and the per-certificate diagnostic logging.
- WinCryptStructures documents each C struct; CERT_CHAIN_CONTEXT is declared
  so the returned cbSize is verified again; 64-bit-only layouts are guarded.
- WindowsCertificateException carries the FormatMessageW text again
  (new Kernel32Ext binding), as the JNA Win32Exception did.

Tests updated to the restored names; CERT_E_UNTRUSTEDROOT replaces the
0x800B0109 literal. Manual macOS tests (-Dmanual.test=true) executed
locally: 8 run, 0 failures, 1 skipped (@Ignore'd on trunk as well).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>